--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,12 @@
     --input: 220 13% 91%;
     --ring: 262.1 83.3% 57.8%;
     --radius: 0.5rem;
+
+    --tail-a: 1 69% 53%;
+    --tail-b: 327 48% 52%;
+    --tail-c: 215 98% 61%;
+    --tail-d: 131 55% 40%;
+    --tail-e: 201 61% 51%;
   }
 
   .dark {
