--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,7 @@
     --border: 220 13% 91%;
     --input: 220 13% 91%;
     --ring: 262.1 83.3% 57.8%;
+    --inner-cirle:
     --radius: 0.5rem;
 
     --tail-a: 1 69% 53%;
