--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* --------------------------------------------------------------------------- */
+
 @layer base {
   :root {
     --background: 0 0% 0%;
@@ -54,4 +56,27 @@
     --input: 215 27.9% 16.9%;
     --ring: 263.4 70% 50.4%;
   }
+}
+
+
+/* --------------------------------------------------------------------- */
+
+.ProseMirror h2 {
+  @apply text-tertiary_heading  font-heading mb-5 mt-5 text-secondary-foreground leading-tight;
+}
+
+.ProseMirror h4 {
+  @apply text-4xl  font-heading mb-4 mt-4 text-secondary-foreground leading-[1];
+}
+
+.ProseMirror p {
+  @apply text-subtitle_heading font-paragraph mb-4;
+}
+
+.ProseMirror ul{
+  @apply lining-nums text-subtitle_heading font-paragraph mb-4 text-foreground py-0 px-8 list-decimal mt-8
+}
+
+.ProseMirror ul li{
+  @apply text-subtitle_heading mb-4 font-paragraph text-foreground
 }
