--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,3 +54,13 @@
     --ring: 263.4 70% 50.4%;
   }
 }
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
