--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,6 +80,9 @@
 .ProseMirror p {
   @apply text-subtitle_heading font-paragraph mb-4;
 }
+.ProseMirror p strong {
+  @apply text-subtitle_heading font-paragraph text-secondary-foreground;
+}
 
 .ProseMirror ul {
   @apply lining-nums text-subtitle_heading font-paragraph mb-4 text-foreground py-0 px-8 list-decimal mt-8;
